2018-09-12  Mark Wielaard  <mark@klomp.org>

	* ebl-hooks.h (check_special_symbol): Drop ehdr argument.
	* ebl_check_special_symbol.c (ebl_check_special_symbol): Likewise.
	* eblopenbackend.c (default_check_special_symbol): Likewise.
	* libebl.h (ebl_check_special_symbol): Likewise.

2018-07-04  Ross Burton <ross.burton@intel.com>

	* eblopenbackend.c: Remove error.h include.

2018-04-25  Mark Wielaard  <mark@klomp.org>

	* eblopenbackend.c (default_debugscn_p): Add new DWARF5 sections
	.debug_addr, .debug_line_str, .debug_loclists, .debug_names,
	.debug_rnglists and .debug_str_offsets.

2018-04-19  Andreas Schwab  <schwab@suse.de>

	* eblopenbackend.c (machines): Add entries for RISC-V.

2018-03-16  Mark Wielaard  <mark@klomp.org>

	* ebldynamictagname.c (ebl_dynamic_tag_name): Add SYMTAB_SHNDX to
	stdtags. Add a eu_static_assert to make sure stdtags contains all
	DT_NUM entries.

2018-02-21  Mark Wielaard  <mark@klomp.org>

	* eblcheckreloctargettype.c (ebl_check_reloc_target_type): Accept
	SHT_NOTE.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* eblobjnote.c (ebl_object_note): Use FALLTHROUGH macro instead of
	comment.

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use fpic_CFLAGS.

2017-07-19  Gustavo Romero <gromero@linux.vnet.ibm.com>

	* eblcorenotetypename.c: Add ppc64 HTM SPRs note as known type.

2017-07-20  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (gen_SOURCES): Add ebl_data_marker_symbol.c.
	* ebl-hooks.h (data_marker_symbol): New hook.
	* ebl_data_marker_symbol.c: New file.
	* eblopenbackend.c (default_data_marker_symbol): New function.
	(fill_defaults): Add default_data_marker_symbol.
	* libebl.h (ebl_data_marker_symbol): New function.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* libebl.h: Use __pure_attribute__.

2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* eblmachineflagname.c: Include system.h.
	* eblopenbackend.c: Likewise.

2016-07-08  Mark Wielaard  <mjw@redhat.com>
